--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/jetstream": "^2.12",
+        "laravel/jetstream": "^2.16",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
@@ -65,7 +65,7 @@
     },
     "repositories": [{
         "type": "path",
-        "url": "../tenancy-v4"
+        "url": "./v4"
     }],
     "minimum-stability": "dev",
     "prefer-stable": true
